assignment-4/asgn4_20CS10082_20CS30029/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    ELLIPSIS
    HASH
    ENUMERATION_CONSTANT


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE

    5 postfix_expression: primary_expression
    6                   | postfix_expression SQUARE_BRACKET_OPEN expression SQUARE_BRACKET_CLOSE
    7                   | postfix_expression ROUND_BRACKET_OPEN argument_expression_list_opt ROUND_BRACKET_CLOSE
    8                   | postfix_expression DOT IDENTIFIER
    9                   | postfix_expression ARROW IDENTIFIER
   10                   | postfix_expression INCREMENT
   11                   | postfix_expression DECREMENT
   12                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
   13                   | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

   14 argument_expression_list_opt: argument_expression_list
   15                             | %empty

   16 argument_expression_list: assignment_expression
   17                         | argument_expression_list COMMA assignment_expression

   18 unary_expression: postfix_expression
   19                 | INCREMENT unary_expression
   20                 | DECREMENT unary_expression
   21                 | unary_operator cast_expression
   22                 | SIZEOF unary_expression
   23                 | SIZEOF ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE

   24 unary_operator: BITWISE_AND
   25               | MULTIPLY
   26               | ADD
   27               | SUBTRACT
   28               | BITWISE_NOT
   29               | LOGICAL_NOT

   30 cast_expression: unary_expression
   31                | ROUND_BRACKET_OPEN type_name ROUND_BRACKET_CLOSE cast_expression

   32 multiplicative_expression: cast_expression
   33                          | multiplicative_expression MULTIPLY cast_expression
   34                          | multiplicative_expression DIVIDE cast_expression
   35                          | multiplicative_expression MODULUS cast_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression ADD multiplicative_expression
   38                    | additive_expression SUBTRACT multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_SHIFT additive_expression
   41                 | shift_expression RIGHT_SHIFT additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression LESS_THAN shift_expression
   44                      | relational_expression GREATER_THAN shift_expression
   45                      | relational_expression LESS_THAN_OR_EQUAL_TO shift_expression
   46                      | relational_expression GREATER_THAN_OR_EQUAL_TO shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression EQUAL_TO relational_expression
   49                    | equality_expression NOT_EQUAL_TO relational_expression

   50 AND_expression: equality_expression
   51               | AND_expression BITWISE_AND equality_expression

   52 exclusive_OR_expression: AND_expression
   53                        | exclusive_OR_expression BITWISE_XOR AND_expression

   54 inclusive_OR_expression: exclusive_OR_expression
   55                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   56 logical_AND_expression: inclusive_OR_expression
   57                       | logical_AND_expression LOGICAL_AND inclusive_OR_expression

   58 logical_OR_expression: logical_AND_expression
   59                      | logical_OR_expression LOGICAL_OR logical_AND_expression

   60 conditional_expression: logical_OR_expression
   61                       | logical_OR_expression QUESTION_MARK expression COLON conditional_expression

   62 assignment_expression: conditional_expression
   63                      | unary_expression assignment_operator assignment_expression

   64 assignment_operator: ASSIGNMENT
   65                    | MULTIPLY_ASSIGNMENT
   66                    | DIVIDE_ASSIGNMENT
   67                    | MODULUS_ASSIGNMENT
   68                    | ADD_ASSIGNMENT
   69                    | SUBTRACT_ASSIGNMENT
   70                    | LEFT_SHIFT_ASSIGNMENT
   71                    | RIGHT_SHIFT_ASSIGNMENT
   72                    | BITWISE_AND_ASSIGNMENT
   73                    | BITWISE_XOR_ASSIGNMENT
   74                    | BITWISE_OR_ASSIGNMENT

   75 expression: assignment_expression
   76           | expression COMMA assignment_expression

   77 constant_expression: conditional_expression

   78 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   79 init_declarator_list_opt: init_declarator_list
   80                         | %empty

   81 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   82                       | type_specifier declaration_specifiers_opt
   83                       | type_qualifier declaration_specifiers_opt
   84                       | function_specifier declaration_specifiers_opt

   85 declaration_specifiers_opt: declaration_specifiers
   86                           | %empty

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list COMMA init_declarator

   89 init_declarator: declarator
   90                | declarator ASSIGNMENT initializer

   91 storage_class_specifier: EXTERN
   92                        | STATIC
   93                        | AUTO
   94                        | REGISTER

   95 type_specifier: VOID
   96               | CHAR
   97               | SHORT
   98               | INT
   99               | LONG
  100               | FLOAT
  101               | DOUBLE
  102               | SIGNED
  103               | UNSIGNED
  104               | _BOOL
  105               | _COMPLEX
  106               | _IMAGINARY
  107               | enum_specifier

  108 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  109                         | type_qualifier specifier_qualifier_list_opt

  110 specifier_qualifier_list_opt: specifier_qualifier_list
  111                             | %empty

  112 enum_specifier: ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  113               | ENUM identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  114               | ENUM IDENTIFIER

  115 identifier_opt: IDENTIFIER
  116               | %empty

  117 enumerator_list: enumerator
  118                | enumerator_list COMMA enumerator

  119 enumerator: IDENTIFIER
  120           | IDENTIFIER ASSIGNMENT constant_expression

  121 type_qualifier: CONST
  122               | RESTRICT
  123               | VOLATILE

  124 function_specifier: INLINE

  125 declarator: pointer_opt direct_declarator

  126 pointer_opt: pointer
  127            | %empty

  128 direct_declarator: IDENTIFIER
  129                  | ROUND_BRACKET_OPEN declarator ROUND_BRACKET_CLOSE
  130                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt assignment_expression_opt SQUARE_BRACKET_CLOSE
  131                  | direct_declarator SQUARE_BRACKET_OPEN STATIC type_qualifier_list_opt assignment_expression SQUARE_BRACKET_CLOSE
  132                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list STATIC assignment_expression SQUARE_BRACKET_CLOSE
  133                  | direct_declarator SQUARE_BRACKET_OPEN type_qualifier_list_opt MULTIPLY SQUARE_BRACKET_CLOSE
  134                  | direct_declarator ROUND_BRACKET_OPEN parameter_type_list ROUND_BRACKET_CLOSE
  135                  | direct_declarator ROUND_BRACKET_OPEN identifier_list_opt ROUND_BRACKET_CLOSE

  136 type_qualifier_list_opt: type_qualifier_list
  137                        | %empty

  138 assignment_expression_opt: assignment_expression
  139                          | %empty

  140 identifier_list_opt: identifier_list
  141                    | %empty

  142 pointer: MULTIPLY type_qualifier_list_opt
  143        | MULTIPLY type_qualifier_list_opt pointer

  144 type_qualifier_list: type_qualifier
  145                    | type_qualifier_list type_qualifier

  146 parameter_type_list: parameter_declaration
  147                    | parameter_list COMMA parameter_declaration

  148 parameter_list: parameter_declaration
  149               | parameter_list COMMA parameter_declaration

  150 parameter_declaration: declaration_specifiers declarator
  151                      | declaration_specifiers

  152 identifier_list: IDENTIFIER
  153                | identifier_list COMMA IDENTIFIER

  154 type_name: specifier_qualifier_list

  155 initializer: assignment_expression
  156            | CURLY_BRACKET_OPEN initializer_list CURLY_BRACKET_CLOSE
  157            | CURLY_BRACKET_OPEN initializer_list COMMA CURLY_BRACKET_CLOSE

  158 initializer_list: designation_opt initializer
  159                 | initializer_list COMMA designation_opt initializer

  160 designation_opt: designation
  161                | %empty

  162 designation: designator_list ASSIGNMENT

  163 designator_list: designator
  164                | designator_list designator

  165 designator: SQUARE_BRACKET_OPEN constant_expression SQUARE_BRACKET_CLOSE
  166           | DOT IDENTIFIER

  167 statement: labeled_statement
  168          | compound_statement
  169          | expression_statement
  170          | selection_statement
  171          | iteration_statement
  172          | jump_statement

  173 labeled_statement: IDENTIFIER COLON statement
  174                  | CASE constant_expression COLON statement
  175                  | DEFAULT COLON statement

  176 compound_statement: CURLY_BRACKET_OPEN block_item_list_opt CURLY_BRACKET_CLOSE

  177 block_item_list_opt: block_item_list
  178                    | %empty

  179 block_item_list: block_item
  180                | block_item_list block_item

  181 block_item: declaration
  182           | statement

  183 expression_statement: expression_opt SEMICOLON

  184 expression_opt: expression
  185               | %empty

  186 selection_statement: IF ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement
  187                    | IF ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement ELSE statement
  188                    | SWITCH ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement

  189 iteration_statement: WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE statement
  190                    | DO statement WHILE ROUND_BRACKET_OPEN expression ROUND_BRACKET_CLOSE SEMICOLON
  191                    | FOR ROUND_BRACKET_OPEN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt ROUND_BRACKET_CLOSE statement
  192                    | FOR ROUND_BRACKET_OPEN declaration expression_opt SEMICOLON expression_opt ROUND_BRACKET_CLOSE statement

  193 jump_statement: GOTO IDENTIFIER SEMICOLON
  194               | CONTINUE SEMICOLON
  195               | BREAK SEMICOLON
  196               | RETURN expression_opt SEMICOLON

  197 translation_unit: external_declaration
  198                 | translation_unit external_declaration

  199 external_declaration: function_definition
  200                     | declaration

  201 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  202 declaration_list_opt: declaration_list
  203                     | %empty

  204 declaration_list: declaration
  205                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 93
    BREAK (259) 195
    CASE (260) 174
    CHAR (261) 96
    CONST (262) 121
    CONTINUE (263) 194
    DEFAULT (264) 175
    DO (265) 190
    DOUBLE (266) 101
    ELSE (267) 187
    ENUM (268) 112 113 114
    EXTERN (269) 91
    FLOAT (270) 100
    FOR (271) 191 192
    GOTO (272) 193
    IF (273) 186 187
    INLINE (274) 124
    INT (275) 98
    LONG (276) 99
    REGISTER (277) 94
    RESTRICT (278) 122
    RETURN (279) 196
    SHORT (280) 97
    SIGNED (281) 102
    SIZEOF (282) 22 23
    STATIC (283) 92 131 132
    STRUCT (284)
    SWITCH (285) 188
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 103
    VOID (289) 95
    VOLATILE (290) 123
    WHILE (291) 189 190
    _BOOL (292) 104
    _COMPLEX (293) 105
    _IMAGINARY (294) 106
    SQUARE_BRACKET_OPEN (295) 6 130 131 132 133 165
    SQUARE_BRACKET_CLOSE (296) 6 130 131 132 133 165
    ROUND_BRACKET_OPEN (297) 4 7 12 13 23 31 129 134 135 186 187 188 189 190 191 192
    ROUND_BRACKET_CLOSE (298) 4 7 12 13 23 31 129 134 135 186 187 188 189 190 191 192
    CURLY_BRACKET_OPEN (299) 12 13 112 113 156 157 176
    CURLY_BRACKET_CLOSE (300) 12 13 112 113 156 157 176
    DOT (301) 8 166
    ARROW (302) 9
    INCREMENT (303) 10 19
    DECREMENT (304) 11 20
    BITWISE_AND (305) 24 51
    MULTIPLY (306) 25 33 133 142 143
    ADD (307) 26 37
    SUBTRACT (308) 27 38
    BITWISE_NOT (309) 28
    LOGICAL_NOT (310) 29
    DIVIDE (311) 34
    MODULUS (312) 35
    LEFT_SHIFT (313) 40
    RIGHT_SHIFT (314) 41
    LESS_THAN (315) 43
    GREATER_THAN (316) 44
    LESS_THAN_OR_EQUAL_TO (317) 45
    GREATER_THAN_OR_EQUAL_TO (318) 46
    EQUAL_TO (319) 48
    NOT_EQUAL_TO (320) 49
    BITWISE_XOR (321) 53
    BITWISE_OR (322) 55
    LOGICAL_AND (323) 57
    LOGICAL_OR (324) 59
    QUESTION_MARK (325) 61
    COLON (326) 61 173 174 175
    SEMICOLON (327) 78 183 190 191 192 193 194 195 196
    ELLIPSIS (328)
    ASSIGNMENT (329) 64 90 120 162
    MULTIPLY_ASSIGNMENT (330) 65
    DIVIDE_ASSIGNMENT (331) 66
    MODULUS_ASSIGNMENT (332) 67
    ADD_ASSIGNMENT (333) 68
    SUBTRACT_ASSIGNMENT (334) 69
    LEFT_SHIFT_ASSIGNMENT (335) 70
    RIGHT_SHIFT_ASSIGNMENT (336) 71
    BITWISE_AND_ASSIGNMENT (337) 72
    BITWISE_XOR_ASSIGNMENT (338) 73
    BITWISE_OR_ASSIGNMENT (339) 74
    COMMA (340) 13 17 76 88 113 118 147 149 153 157 159
    HASH (341)
    CONSTANT (342) 2
    IDENTIFIER (343) 1 8 9 114 115 119 120 128 152 153 166 173 193
    STRING_LITERAL (344) 3
    ENUMERATION_CONSTANT (345)


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    primary_expression (92)
        on left: 1 2 3 4
        on right: 5
    postfix_expression (93)
        on left: 5 6 7 8 9 10 11 12 13
        on right: 6 7 8 9 10 11 18
    argument_expression_list_opt (94)
        on left: 14 15
        on right: 7
    argument_expression_list (95)
        on left: 16 17
        on right: 14 17
    unary_expression (96)
        on left: 18 19 20 21 22 23
        on right: 19 20 22 30 63
    unary_operator (97)
        on left: 24 25 26 27 28 29
        on right: 21
    cast_expression (98)
        on left: 30 31
        on right: 21 31 32 33 34 35
    multiplicative_expression (99)
        on left: 32 33 34 35
        on right: 33 34 35 36 37 38
    additive_expression (100)
        on left: 36 37 38
        on right: 37 38 39 40 41
    shift_expression (101)
        on left: 39 40 41
        on right: 40 41 42 43 44 45 46
    relational_expression (102)
        on left: 42 43 44 45 46
        on right: 43 44 45 46 47 48 49
    equality_expression (103)
        on left: 47 48 49
        on right: 48 49 50 51
    AND_expression (104)
        on left: 50 51
        on right: 51 52 53
    exclusive_OR_expression (105)
        on left: 52 53
        on right: 53 54 55
    inclusive_OR_expression (106)
        on left: 54 55
        on right: 55 56 57
    logical_AND_expression (107)
        on left: 56 57
        on right: 57 58 59
    logical_OR_expression (108)
        on left: 58 59
        on right: 59 60 61
    conditional_expression (109)
        on left: 60 61
        on right: 61 62 77
    assignment_expression (110)
        on left: 62 63
        on right: 16 17 63 75 76 131 132 138 155
    assignment_operator (111)
        on left: 64 65 66 67 68 69 70 71 72 73 74
        on right: 63
    expression (112)
        on left: 75 76
        on right: 4 6 61 76 184 186 187 188 189 190
    constant_expression (113)
        on left: 77
        on right: 120 165 174
    declaration (114)
        on left: 78
        on right: 181 192 200 204 205
    init_declarator_list_opt (115)
        on left: 79 80
        on right: 78
    declaration_specifiers (116)
        on left: 81 82 83 84
        on right: 78 85 150 151 201
    declaration_specifiers_opt (117)
        on left: 85 86
        on right: 81 82 83 84
    init_declarator_list (118)
        on left: 87 88
        on right: 79 88
    init_declarator (119)
        on left: 89 90
        on right: 87 88
    storage_class_specifier (120)
        on left: 91 92 93 94
        on right: 81
    type_specifier (121)
        on left: 95 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 82 108
    specifier_qualifier_list (122)
        on left: 108 109
        on right: 110 154
    specifier_qualifier_list_opt (123)
        on left: 110 111
        on right: 108 109
    enum_specifier (124)
        on left: 112 113 114
        on right: 107
    identifier_opt (125)
        on left: 115 116
        on right: 112 113
    enumerator_list (126)
        on left: 117 118
        on right: 112 113 118
    enumerator (127)
        on left: 119 120
        on right: 117 118
    type_qualifier (128)
        on left: 121 122 123
        on right: 83 109 144 145
    function_specifier (129)
        on left: 124
        on right: 84
    declarator (130)
        on left: 125
        on right: 89 90 129 150 201
    pointer_opt (131)
        on left: 126 127
        on right: 125
    direct_declarator (132)
        on left: 128 129 130 131 132 133 134 135
        on right: 125 130 131 132 133 134 135
    type_qualifier_list_opt (133)
        on left: 136 137
        on right: 130 131 133 142 143
    assignment_expression_opt (134)
        on left: 138 139
        on right: 130
    identifier_list_opt (135)
        on left: 140 141
        on right: 135
    pointer (136)
        on left: 142 143
        on right: 126 143
    type_qualifier_list (137)
        on left: 144 145
        on right: 132 136 145
    parameter_type_list (138)
        on left: 146 147
        on right: 134
    parameter_list (139)
        on left: 148 149
        on right: 147 149
    parameter_declaration (140)
        on left: 150 151
        on right: 146 147 148 149
    identifier_list (141)
        on left: 152 153
        on right: 140 153
    type_name (142)
        on left: 154
        on right: 12 13 23 31
    initializer (143)
        on left: 155 156 157
        on right: 90 158 159
    initializer_list (144)
        on left: 158 159
        on right: 12 13 156 157 159
    designation_opt (145)
        on left: 160 161
        on right: 158 159
    designation (146)
        on left: 162
        on right: 160
    designator_list (147)
        on left: 163 164
        on right: 162 164
    designator (148)
        on left: 165 166
        on right: 163 164
    statement (149)
        on left: 167 168 169 170 171 172
        on right: 173 174 175 182 186 187 188 189 190 191 192
    labeled_statement (150)
        on left: 173 174 175
        on right: 167
    compound_statement (151)
        on left: 176
        on right: 168 201
    block_item_list_opt (152)
        on left: 177 178
        on right: 176
    block_item_list (153)
        on left: 179 180
        on right: 177 180
    block_item (154)
        on left: 181 182
        on right: 179 180
    expression_statement (155)
        on left: 183
        on right: 169
    expression_opt (156)
        on left: 184 185
        on right: 183 191 192 196
    selection_statement (157)
        on left: 186 187 188
        on right: 170
    iteration_statement (158)
        on left: 189 190 191 192
        on right: 171
    jump_statement (159)
        on left: 193 194 195 196
        on right: 172
    translation_unit (160)
        on left: 197 198
        on right: 0 198
    external_declaration (161)
        on left: 199 200
        on right: 197 198
    function_definition (162)
        on left: 201
        on right: 199
    declaration_list_opt (163)
        on left: 202 203
        on right: 201
    declaration_list (164)
        on left: 204 205
        on right: 202 205


State 0

    0 $accept: . translation_unit $end

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   93 storage_class_specifier: AUTO .

    $default  reduce using rule 93 (storage_class_specifier)


State 2

   96 type_specifier: CHAR .

    $default  reduce using rule 96 (type_specifier)


State 3

  121 type_qualifier: CONST .

    $default  reduce using rule 121 (type_qualifier)


State 4

  101 type_specifier: DOUBLE .

    $default  reduce using rule 101 (type_specifier)


State 5

  112 enum_specifier: ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  113               | ENUM . identifier_opt CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE
  114               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 116 (identifier_opt)

    identifier_opt  go to state 33


State 6

   91 storage_class_specifier: EXTERN .

    $default  reduce using rule 91 (storage_class_specifier)


State 7

  100 type_specifier: FLOAT .

    $default  reduce using rule 100 (type_specifier)


State 8

  124 function_specifier: INLINE .

    $default  reduce using rule 124 (function_specifier)


State 9

   98 type_specifier: INT .

    $default  reduce using rule 98 (type_specifier)


State 10

   99 type_specifier: LONG .

    $default  reduce using rule 99 (type_specifier)


State 11

   94 storage_class_specifier: REGISTER .

    $default  reduce using rule 94 (storage_class_specifier)


State 12

  122 type_qualifier: RESTRICT .

    $default  reduce using rule 122 (type_qualifier)


State 13

   97 type_specifier: SHORT .

    $default  reduce using rule 97 (type_specifier)


State 14

  102 type_specifier: SIGNED .

    $default  reduce using rule 102 (type_specifier)


State 15

   92 storage_class_specifier: STATIC .

    $default  reduce using rule 92 (storage_class_specifier)


State 16

  103 type_specifier: UNSIGNED .

    $default  reduce using rule 103 (type_specifier)


State 17

   95 type_specifier: VOID .

    $default  reduce using rule 95 (type_specifier)


State 18

  123 type_qualifier: VOLATILE .

    $default  reduce using rule 123 (type_qualifier)


State 19

  104 type_specifier: _BOOL .

    $default  reduce using rule 104 (type_specifier)


State 20

  105 type_specifier: _COMPLEX .

    $default  reduce using rule 105 (type_specifier)


State 21

  106 type_specifier: _IMAGINARY .

    $default  reduce using rule 106 (type_specifier)


State 22

  200 external_declaration: declaration .

    $default  reduce using rule 200 (external_declaration)


State 23

   78 declaration: declaration_specifiers . init_declarator_list_opt SEMICOLON
  201 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    MULTIPLY  shift, and go to state 34

    SEMICOLON  reduce using rule 80 (init_declarator_list_opt)
    $default   reduce using rule 127 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   81 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   82 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  107 type_specifier: enum_specifier .

    $default  reduce using rule 107 (type_specifier)


State 27

   83 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   84 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    $default  reduce using rule 86 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  198 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 46
    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  197 translation_unit: external_declaration .

    $default  reduce using rule 197 (translation_unit)


State 31

  199 external_declaration: function_definition .

    $default  reduce using rule 199 (external_declaration)


State 32

  114 enum_specifier: ENUM IDENTIFIER .
  115 identifier_opt: IDENTIFIER .

    CURLY_BRACKET_OPEN  reduce using rule 115 (identifier_opt)
    $default            reduce using rule 114 (enum_specifier)


State 33

  112 enum_specifier: ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list CURLY_BRACKET_CLOSE
  113               | ENUM identifier_opt . CURLY_BRACKET_OPEN enumerator_list COMMA CURLY_BRACKET_CLOSE

    CURLY_BRACKET_OPEN  shift, and go to state 48


State 34

  142 pointer: MULTIPLY . type_qualifier_list_opt
  143        | MULTIPLY . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 137 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   78 declaration: declaration_specifiers init_declarator_list_opt . SEMICOLON

    SEMICOLON  shift, and go to state 52


State 36

   79 init_declarator_list_opt: init_declarator_list .
   88 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 53

    $default  reduce using rule 79 (init_declarator_list_opt)


State 37

   87 init_declarator_list: init_declarator .

    $default  reduce using rule 87 (init_declarator_list)


State 38

   89 init_declarator: declarator .
   90                | declarator . ASSIGNMENT initializer
  201 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    AUTO        shift, and go to state 1
    CHAR        shift, and go to state 2
    CONST       shift, and go to state 3
    DOUBLE      shift, and go to state 4
    ENUM        shift, and go to state 5
    EXTERN      shift, and go to state 6
    FLOAT       shift, and go to state 7
    INLINE      shift, and go to state 8
    INT         shift, and go to state 9
    LONG        shift, and go to state 10
    REGISTER    shift, and go to state 11
    RESTRICT    shift, and go to state 12
    SHORT       shift, and go to state 13
    SIGNED      shift, and go to state 14
    STATIC      shift, and go to state 15
    UNSIGNED    shift, and go to state 16
    VOID        shift, and go to state 17
    VOLATILE    shift, and go to state 18
    _BOOL       shift, and go to state 19
    _COMPLEX    shift, and go to state 20
    _IMAGINARY  shift, and go to state 21
    ASSIGNMENT  shift, and go to state 54

    CURLY_BRACKET_OPEN  reduce using rule 203 (declaration_list_opt)
    $default            reduce using rule 89 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 57
    declaration_list         go to state 58


State 39

  125 declarator: pointer_opt . direct_declarator

    ROUND_BRACKET_OPEN  shift, and go to state 59
    IDENTIFIER          shift, and go to state 60

    direct_declarator  go to state 61


State 40

  126 pointer_opt: pointer .

    $default  reduce using rule 126 (pointer_opt)


State 41

   85 declaration_specifiers_opt: declaration_specifiers .
